aeron added to comparison